# Aliengo_2D_Nav-sim

./: LICENSE  README.md
aliengo_2dnav/: CMakeLists.txt  package.xml
aliengo_2dnav/config/: base_local_planner_params.yaml  costmap_common_params.yaml  exploration.yaml  global_planner.yaml  local_costmap_params.yaml
aliengo_2dnav/launch/: explore_aliengo.launch  gmapping_aliengo.launch  navigation_aliengo.launch
aliengo_2dnav/rviz/: gmapping_rviz.rviz  navigation.rviz  rviz_explore.rviz
aliengo_gait_controller/: CMakeLists.txt  package.xml
aliengo_gait_controller/include/: Kinematics.h  trajectory_generator.h
aliengo_gait_controller/launch/: aliengo_gait.launch
aliengo_gait_controller/src/: Kinematics.cpp  gait.cpp  trajectory_generator.cpp
depthimage_to_laserscan/launch/: depth_to_laser.launch
keyboard_control/: CMakeLists.txt  package.xml
keyboard_control/src/: teleop_keyboard.py
rtab_map_testing_pkg/: CMakeLists.txt  package.xml
rtab_map_testing_pkg/config/: rtab_rosparam.yaml
rtab_map_testing_pkg/launch/: cameras.launch  rtab_map.launch
rtab_map_testing_pkg/rviz/: guru.rviz
unitree_ros-master/robots/aliengo_description/: CMakeLists.txt
unitree_ros-master/robots/aliengo_description/config/: rviz_laser.rviz
unitree_ros-master/robots/aliengo_description/launch/: aliengo_rviz.launch
unitree_ros-master/robots/aliengo_description/src/: odometry.cpp
unitree_ros-master/robots/aliengo_description/xacro/: aliengo.urdf
unitree_ros-master/unitree_controller/src/: body.cpp  (+1 more)
unitree_ros-master/unitree_gazebo/: package.xml
unitree_ros-master/unitree_legged_msgs/: CMakeLists.txt
(+9 files in other folders)
